fixed link/button z-index issue

--- a/public/global.css
+++ b/public/global.css
@@ -34,9 +34,5 @@ body {
 a {
 	position: relative;
 	color: inherit;
-	z-index: 401;
-}
-
-button {
-	outline: none;
+	z-index: 401 !important;
 }
